add aside, update action, update navbar resize, refactoring dashboard